[package]
name = "rust_bar_generator"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_bar_generator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
chrono = "0.4.42"
chrono-tz = "0.10.4"
regex = "1.12.2"
once_cell = "1.21.3"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1